--- a/backend/package.json
+++ b/backend/package.json
@@ -3,21 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "type": "module",
   "scripts": {
-  "start": "node index.js",      
-  "dev": "nodemon -r dotenv/config --experimental-json-modules index.js"
-
-}
-,
+    "start": "node index.js",
+    "dev": "nodemon -r dotenv/config --experimental-json-modules index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
