--- a/server/package.json
+++ b/server/package.json
@@ -2,16 +2,18 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon -r dotenv/config --experimental-json-modules index.js"
-  },
+  
+    "scripts": {
+      "start": "node -r dotenv/config index.js",
+      "dev": "nodemon -r dotenv/config index.js"
+    }
+  ,
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
