--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,6 @@
     "start": "node index.js",
     "dev": "nodemon -r dotenv/config --experimental-json-modules index.js"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,7 +18,8 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "xmlrpc": "^1.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
