--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.7",
     "mssql": "^11.0.1",
     "nodemon": "^3.1.9",
+    "odoo-xmlrpc": "^1.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
