--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "dotenv": "^16.4.7",
     "mssql": "^11.0.1",
     "nodemon": "^3.1.9",
