--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "odoo-xmlrpc": "^1.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "tailwind": "^4.0.0"
   },
